package businesses;

/**
 * Enum с типами индустрии
 */
public enum IndustryType{
    TELECOMMUNICATION,
    CONSTRUCTION,
    ENERGY,
    FOOD,
    RESTAURANT,
    FASHION;
}
