package products;

/**
 * Дает свойство производимости предмету.
 * @author vadim
 */
@FunctionalInterface
public interface Manufacturable {
    void produce();
}
